--- a/docs/docs/server-monitoring.mdx
+++ b/docs/docs/server-monitoring.mdx
@@ -1,6 +1,8 @@
----
+id: server-monitoring
 title: Server Monitoring
 sidebar_position: 6
+description: Import Grafana dashboards to observe Archon microservices.
+tags: [monitoring, grafana, observability]
 ---
 
 import Admonition from '@theme/Admonition';
@@ -92,6 +94,20 @@ docker-compose logs -f
 docker-compose logs -f archon-server
 docker-compose logs -f archon-mcp
 ```
+
+### Grafana Dashboards
+
+Import prebuilt Grafana dashboards to visualize latency, throughput, error rates, and CPU saturation for each microservice:
+
+1. Start the monitoring stack:
+
+   ```bash
+   docker-compose up -d grafana prometheus
+   ```
+
+2. Navigate to Grafana at `http://localhost:3000` and log in (default password `admin` unless overridden).
+3. The dashboards are provisioned from `monitoring/dashboards/` and appear under the "Archon" folder.
+4. Ensure the Prometheus data source URL is set via the `PROMETHEUS_URL` environment variable.
 
 ### Database Monitoring
 
