--- a/docs/docs/server-monitoring.mdx
+++ b/docs/docs/server-monitoring.mdx
@@ -183,6 +183,23 @@ Archon automatically manages resources:
 - **Connection Pooling**: Optimizes database performance
 - **Batch Processing**: Efficiently handles large document sets
 
+## 🚨 Alert Runbook
+
+### ErrorRateHigh
+1. Inspect service logs with `docker-compose logs -f <service>`.
+2. Verify recent deployments or configuration changes.
+3. If the error rate stays above threshold for 30 minutes, escalate to the backend on-call engineer.
+
+### LatencyHigh
+1. Check current load and upstream dependencies.
+2. Review Grafana dashboards for resource saturation.
+3. Escalate to the infrastructure team if latency persists beyond 30 minutes.
+
+### ServiceDown
+1. Attempt a restart: `docker-compose restart <service>`.
+2. If the service fails to start, gather logs and raise an incident in the ops channel.
+3. Escalate immediately to SRE if downtime exceeds 5 minutes.
+
 ---
 
 **Need Help?** Check the [Troubleshooting Guide](./troubleshooting) for detailed debugging steps.
