--- a/docs/docs/server-monitoring.mdx
+++ b/docs/docs/server-monitoring.mdx
@@ -1,3 +1,4 @@
+---
 id: server-monitoring
 title: Server Monitoring
 sidebar_position: 6
@@ -198,7 +199,7 @@ Archon automatically manages resources:
 ### ErrorRateHigh
 1. Inspect service logs with `docker-compose logs -f <service>`.
 2. Verify recent deployments or configuration changes.
-3. If the error rate stays above threshold for 30 minutes, escalate to the backend on-call engineer.
+3. If the error rate stays above threshold for 30 minutes, page the backend on-call engineer.
 
 ### LatencyHigh
 1. Check current load and upstream dependencies.
